{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 145,
  "lineage": "3ef826ee-d20d-049a-b924-e3f2408f3ece",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8aacbb8554e88c5",
            "arn": "arn:aws:ec2:us-east-2:211125329539:elastic-ip/eipalloc-0d8aacbb8554e88c5",
            "association_id": "eipassoc-0fedc7d9499a66712",
            "domain": "vpc",
            "id": "eipalloc-0d8aacbb8554e88c5",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f44b6572ef6aa469",
            "private_dns": "ip-10-0-1-178.us-east-2.compute.internal",
            "private_ip": "10.0.1.178",
            "public_dns": "ec2-3-21-252-193.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.252.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-eip-us-east-2a",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-eip-us-east-2a",
              "Owner": "Ramratan"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e95d74e79f616102",
            "arn": "arn:aws:ec2:us-east-2:211125329539:elastic-ip/eipalloc-0e95d74e79f616102",
            "association_id": "eipassoc-02cba11d2e78a5372",
            "domain": "vpc",
            "id": "eipalloc-0e95d74e79f616102",
            "network_border_group": "us-east-2",
            "network_interface": "eni-034a1804b70289e6d",
            "private_dns": "ip-10-0-2-239.us-east-2.compute.internal",
            "private_ip": "10.0.2.239",
            "public_dns": "ec2-13-59-123-248.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.123.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-eip-us-east-2b",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-eip-us-east-2b",
              "Owner": "Ramratan"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:internet-gateway/igw-02671240eed56bbc9",
            "id": "igw-02671240eed56bbc9",
            "owner_id": "211125329539",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-igw",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-igw",
              "Owner": "Ramratan"
            },
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aeb170770212c8c",
            "original_route_table_id": "rtb-06f43ddeb9764c061",
            "route_table_id": "rtb-0525a02ff4aea1da3",
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8aacbb8554e88c5",
            "association_id": "eipassoc-0fedc7d9499a66712",
            "connectivity_type": "public",
            "id": "nat-0116b4d26f290980d",
            "network_interface_id": "eni-0f44b6572ef6aa469",
            "private_ip": "10.0.1.178",
            "public_ip": "3.21.252.193",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07099c6b191596fb8",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-nat-us-east-2a",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-nat-us-east-2a",
              "Owner": "Ramratan"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e95d74e79f616102",
            "association_id": "eipassoc-02cba11d2e78a5372",
            "connectivity_type": "public",
            "id": "nat-0a3537b6fcdba5c02",
            "network_interface_id": "eni-034a1804b70289e6d",
            "private_ip": "10.0.2.239",
            "public_ip": "13.59.123.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c5baad48c59a763c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-nat-us-east-2b",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-nat-us-east-2b",
              "Owner": "Ramratan"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "additional_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "additional_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02671240eed56bbc9",
            "id": "r-rtb-0525a02ff4aea1da31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0525a02ff4aea1da3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_nat_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0796a879ff1bbd7a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0116b4d26f290980d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0796a879ff1bbd7a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d84b90638cf47f041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a3537b6fcdba5c02",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d84b90638cf47f04",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:route-table/rtb-0796a879ff1bbd7a7",
            "id": "rtb-0796a879ff1bbd7a7",
            "owner_id": "211125329539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0116b4d26f290980d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-private-rt-us-east-2a",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-private-rt-us-east-2a",
              "Owner": "Ramratan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:route-table/rtb-0d84b90638cf47f04",
            "id": "rtb-0d84b90638cf47f04",
            "owner_id": "211125329539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3537b6fcdba5c02",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-private-rt-us-east-2b",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-private-rt-us-east-2b",
              "Owner": "Ramratan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:route-table/rtb-0525a02ff4aea1da3",
            "id": "rtb-0525a02ff4aea1da3",
            "owner_id": "211125329539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02671240eed56bbc9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-public-rt",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-public-rt",
              "Owner": "Ramratan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c546a221fd8a8f5",
            "route_table_id": "rtb-0796a879ff1bbd7a7",
            "subnet_id": "subnet-0590915656e209689"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.database_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0036b613dd7055def",
            "route_table_id": "rtb-0d84b90638cf47f04",
            "subnet_id": "subnet-0b9ee329acfce7d0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.database_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af910949b20b6089",
            "route_table_id": "rtb-0796a879ff1bbd7a7",
            "subnet_id": "subnet-0bbfa10e581c2cc63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027842b8fa70e22c6",
            "route_table_id": "rtb-0d84b90638cf47f04",
            "subnet_id": "subnet-063b6ce86b82633d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077d3d6ebcea97a35",
            "route_table_id": "rtb-0525a02ff4aea1da3",
            "subnet_id": "subnet-07099c6b191596fb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb928621ba5ad64",
            "route_table_id": "rtb-0525a02ff4aea1da3",
            "subnet_id": "subnet-0c5baad48c59a763c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:subnet/subnet-0590915656e209689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0590915656e209689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125329539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-db-us-east-2a",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-db-us-east-2a",
              "Owner": "Ramratan"
            },
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:subnet/subnet-0b9ee329acfce7d0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9ee329acfce7d0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125329539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-db-us-east-2b",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-db-us-east-2b",
              "Owner": "Ramratan"
            },
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:subnet/subnet-0bbfa10e581c2cc63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbfa10e581c2cc63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125329539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-private-us-east-2a",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-private-us-east-2a",
              "Owner": "Ramratan"
            },
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:subnet/subnet-063b6ce86b82633d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063b6ce86b82633d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125329539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-private-us-east-2b",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-private-us-east-2b",
              "Owner": "Ramratan"
            },
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:subnet/subnet-07099c6b191596fb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07099c6b191596fb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125329539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-public-us-east-2a",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-public-us-east-2a",
              "Owner": "Ramratan"
            },
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:subnet/subnet-0c5baad48c59a763c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5baad48c59a763c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125329539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-public-us-east-2b",
              "Owner": "Ramratan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-public-us-east-2b",
              "Owner": "Ramratan"
            },
            "vpc_id": "vpc-0bc3aef05f4e3c2c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125329539:vpc/vpc-0bc3aef05f4e3c2c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fe7c44e1c8fe24f",
            "default_route_table_id": "rtb-0525a02ff4aea1da3",
            "default_security_group_id": "sg-06a411bbd89bf1b09",
            "dhcp_options_id": "dopt-022d393d1310139d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc3aef05f4e3c2c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0525a02ff4aea1da3",
            "owner_id": "211125329539",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-vpc",
              "Owner": "Ramratan",
              "Team": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-vpc",
              "Owner": "Ramratan",
              "Team": "DevOps"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}